finished chinese translation

--- a/bitcoin_pages/templates/bitcoin_pages/index.html
+++ b/bitcoin_pages/templates/bitcoin_pages/index.html
@@ -102,7 +102,7 @@ active
 								<h5>{% trans 'Bitcoin Trading' %}</h5>
 							</div>
 							<div class="single-about-dec">
-								<p>{% trans 'Bifonix has consistently taken measures to makes online trading and investing accessible' %} </p>
+								<p>{% trans 'FonixCoin has consistently taken measures to makes online trading and investing accessible' %} </p>
 							</div>
 						</div>
 					</div>
