--- a/bitcoin_pages/templates/bitcoin_pages/security_ensure.html
+++ b/bitcoin_pages/templates/bitcoin_pages/security_ensure.html
@@ -116,7 +116,7 @@
 					<div class="row mt-4">
 						<div class="col-12 ser-page-into">
 							<h4>{% trans 'Service Overview' %}</h4>
-							<p>{% trans 'Security of user information and funds is our first priority. Learn more about our security features and integrations.The Fonixcoin REST and Websocket APIs are designed to facilitate access to all features of the Bitfinex platform, allowing full integration with traders’ own products and platforms.' %}</p>
+							<p>{% trans 'Security of user information and funds is our first priority. Learn more about our security features and integrations.The Fonixcoin REST and Websocket APIs are designed to facilitate access to all features of the FonixCoin platform, allowing full integration with traders’ own products and platforms.' %}</p>
 						</div>
 						<!-- end col -->
 						<div class="row">
@@ -157,7 +157,7 @@
 							<div class="col-12">
 								<ul class="nav nav-tabs" role="tablist">
 									<li class="nav-item"><a class="nav-link active" href="#" data-target="#srone" data-toggle="tab">{% trans 'Description' %}</a></li>
-									<li class="nav-item"><a class="nav-link" href="#" data-target="#srtwo" data-toggle="tab">{% trans 'Experinece' %}</a></li>
+									<li class="nav-item"><a class="nav-link" href="#" data-target="#srtwo" data-toggle="tab">{% trans 'Experience' %}</a></li>
 									<li class="nav-item"><a class="nav-link" href="#" data-target="#srthree" data-toggle="tab">{% trans 'Values' %}</a></li>
 								</ul>
 								<!-- Tab panes -->
