--- a/bitcoin_pages/templates/bitcoin_pages/services.html
+++ b/bitcoin_pages/templates/bitcoin_pages/services.html
@@ -28,7 +28,7 @@ active
 					<div class="col-12 text-center">
 						<ol class="breadcrumb">
 							<li class="breadcrumb-item"><a href="#">{% trans 'Home' %}</a></li>
-							<li class="breadcrumb-item active">{% trans 'Servcies' %}</li>
+							<li class="breadcrumb-item active">{% trans 'Services' %}</li>
 						</ol>
 					</div>
 				</div>
@@ -57,7 +57,7 @@ active
 								</div>
 							</div>
 							<div class="single-service-dec">
-								<p>{% trans 'Bifonix has consistently taken measures to ensure its platform makes online trading and investing accessible to anyone.' %}
+								<p>{% trans 'FonixCoin has consistently taken measures to ensure its platform makes online trading and investing accessible to anyone.' %}
 									<a href="{% url 'bitcoin_trading' %}">[...]</a>
 								</p>
 							</div>	
