finished chinese translation

--- a/templates/base_layout.html
+++ b/templates/base_layout.html
@@ -165,7 +165,7 @@
 								<i class="icofont icofont-phone"></i>
 							</div>
 							<p>{% trans "Call Us" %}</p>
-                            <h6>+1-470-673-1900</h6>
+                            <h6>+44-748-0071-025</h6>
                         </div>
 						<div class="header-info-box">
                             <a href="#" class="quote-btn">{% trans "Get started" %} <i class="icofont icofont-caret-right"></i></a>
@@ -321,7 +321,7 @@
 								</div>
 								<div class="single-fcontact-des">
 									<h6>{% trans 'Phone Number' %}:</h6>
-									<p>+1-470-673-1900</p>
+									<p>+44-748-0071-025</p>
 								</div>
 							</div>
 							<div class="single-fcontact">
@@ -338,7 +338,7 @@
 							<div class="footer-social">
 								<ul>
 									<li><a href="#"><i class="icofont icofont-social-facebook"></i></a></li>
-									<li><a href="#"><i class="icofont icofont-social-instagram"></i></a></li>
+									<li><a href="https://www.instagram.com/fonixcoin" target="_blank"><i class="icofont icofont-social-instagram"></i></a></li>
 								</ul>
 							</div>
 						</div>
