--- a/bitcoin_pages/templates/bitcoin_pages/contact-us.html
+++ b/bitcoin_pages/templates/bitcoin_pages/contact-us.html
@@ -74,8 +74,8 @@ active
 						</div>
 						<div class="single-address-dec">
 							<h4>{% trans 'Give a call' %}</h4>
+							<p>{% trans 'Phone' %}:+44-748-0071-025 </p>
 							<p>{% trans 'Phone' %}: +1-470-673-1900</p>
-							<p>{% trans 'Phone' %}: </p>
 						</div>
 						<div class="single-address-link">
 							<a href="#">quick call</a>
@@ -105,7 +105,7 @@ active
 						</div>
 						<div class="single-address-dec">
 							<h4>{% trans "Lets's have a chat" %}</h4>
-							<p>{% trans 'Telephone' %}: +1-470-673-1900</p>
+							<p>{% trans 'Telephone' %}: +44-748-0071-025</p>
 	
 						</div>
 						<div class="single-address-link">
