--- a/transactions/templates/transactions/bank_details.html
+++ b/transactions/templates/transactions/bank_details.html
@@ -51,7 +51,7 @@
               <h3>{% trans 'Sort Code' %}:</h3>
             </div>
             <div class="col-8 align-left">
-              <h3>{{ details.sort_name }}</h3>
+              <h3>{{ details.sort_code }}</h3>
             </div>
             <!-- /.col -->
           </div>
