--- a/transactions/templates/transactions/withdrawal_form.html
+++ b/transactions/templates/transactions/withdrawal_form.html
@@ -8,7 +8,7 @@
     <!-- Content Header (Page header) -->
     <section class="content-header">
       <h1>
-       {% trans Withdraw Funds %}
+       {% trans 'Withdraw Fund' %}
       </h1>
       <ol class="breadcrumb">
         <li class="breadcrumb-item"><a href="#"><i class="fa fa-dashboard"></i> {% trans 'Home' %}</a></li>
