one translation left

--- a/bitcoin_pages/templates/bitcoin_pages/coin_buy_and_sell.html
+++ b/bitcoin_pages/templates/bitcoin_pages/coin_buy_and_sell.html
@@ -118,7 +118,7 @@
 					<div class="row mt-4">
 						<div class="col-12 ser-page-into">
 							<h4>{% trans 'Coin buy and Sell' %}</h4>
-							<p>{% trans "FonixCoin offers order books with top tier liquidity, allowing users to easily exchange Bitcoin, Ethereum, EOS, Litecoin, Ripple, NEO and many other digital assets with minimal slippage.Bitfinex also boasts a suite of order types to help traders take advantage of every situation." %}</p>
+							<p>{% trans "FonixCoin offers order books with top tier liquidity, allowing users to easily exchange Bitcoin, Ethereum, EOS, Litecoin, Ripple, NEO and many other digital assets with minimal slippage.FonixCoin also boasts a suite of order types to help traders take advantage of every situation." %}</p>
 						</div>
 						<!-- end col -->
 						<div class="row">
