--- a/bitcoin_pages/templates/bitcoin_pages/index.html
+++ b/bitcoin_pages/templates/bitcoin_pages/index.html
@@ -17,7 +17,7 @@ active
 						<div class="row">
 							<div class="col-lg-7 col-md-10 col-12 mr-auto text-left">
 								<div class="home-single-slide-dec">
-									<h2>{% trans "Secure & easy way to" %} <br> {% trans "buy & sell bitcoin" %}</h2>
+									<h2>{% trans "Secure & easy way to" %} {% trans "buy & sell bitcoin" %}</h2>
 									<p class="text-capitalize">{% trans "We put the power in your hands, to buy, sell and trade digital currency. We are FonixCoin, consistently rated the best and most secure cryptocurrency exchange." %}</p>
 									<div class="home-single-slide-button">
 										<a href="#" class="btn-style btn-filled">{% trans 'Learn More' %}</a>
