--- a/templates/base_layout.html
+++ b/templates/base_layout.html
@@ -35,7 +35,7 @@
 
 <body>	
 	<!-- START HEADER SECTION -->
-	<header class="main-header header-1">
+	<header class="main-header">
 		<!-- START TOP AREA -->
 		<div class="top-area">
   <!-- TradingView Widget BEGIN -->
