--- a/templates/base_layout.html
+++ b/templates/base_layout.html
@@ -302,7 +302,7 @@
                     <!-- End Widget -->
                     <div class="col-lg-3 col-md-6 col-sm-12 col-12 mb-0 footer-widget">
                         <div class="footer-section-title col-12 no-padding">
-                            <h3>Stay With Us</h3>
+                            <h3>{% trans "Stay With Us" %}</h3>
                         </div>
                         <!-- END SECTION TITLE -->
 						<div class="col-12 footer-widget-inner">
@@ -311,7 +311,7 @@
 									<i class="icofont icofont-pin"></i>
 								</div>
 								<div class="single-fcontact-des">
-									<h6>Compnay Name:</h6>
+									<h6>{% trans "Address" %}:</h6>
 									<p>10004, Battery Park, New York, USA </p>
 								</div>
 							</div>
